# ESP32_FallDetection

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig
components/alarm/: CMakeLists.txt  alarm.c
components/alarm/include/: alarm.h
components/gps/: ATGM336H.c  CMakeLists.txt
components/gps/include/: ATGM336H.h  gps.h
components/led_strip/include/: led_blink.h
components/led_strip/src/: led_blink.c
components/motor/: CMakeLists.txt
components/motor/include/: motor.h
components/mqtt/: CMakeLists.txt  mqtt.c
components/mqtt/include/: mqtt.h
components/oled/: CMakeLists.txt  oled.c
components/oled/include/: oled.h  oledfont.h
components/posture/: CMakeLists.txt  posture.c
components/posture/include/: posture.h
components/wifi/: CMakeLists.txt  wifi.c
components/wifi/include/: wifi.h
main/: CMakeLists.txt  blink_example_main.c  idf_component.yml
